Niffler-auth: redirect from "/" to "login", reload forms /login & /register after 29m (csrf token should be updated), up frontend dependencies

--- a/niffler-auth/src/main/resources/templates/login.html
+++ b/niffler-auth/src/main/resources/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <title>Login to Niffler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="refresh" content="1740"/>
     <link rel="icon" th:href="@{images/favicon.ico}"/>
     <link href="../static/styles/styles.css" th:href="@{styles/styles.css}" rel="stylesheet"
           type="text/css"/>
